# rustlings

./: .gitpod.yml  package-lock.json  package.json
exercises/functions/: functions1.rs  functions2.rs  functions3.rs  functions5.rs
exercises/variables/: variables5.rs.save
personal/notes/: assembly.md  derivable-traits.md  development-tools.md  editions.md  keywords.md  nightly-rust.md  operators-symbols.md  wasm.md  wasmII.md  yew-example.md
personal/projects/advanced_features/src/: main.rs
personal/projects/automated_tests/src/: main.rs
personal/projects/branches/src/: main.rs
personal/projects/cargo_crates/src/: main.rs
personal/projects/chrome extenstion/: data.json  main.rs  popup.html  popup.rs
personal/projects/collections/src/: main.rs
personal/projects/command_line_program/: Cargo.toml
personal/projects/command_line_program/src/: main.rs
personal/projects/enums/src/: main.rs
personal/projects/errors/src/: main.rs
personal/projects/fearless_concurrency/src/: main.rs
personal/projects/fizzbuzz/: fizzbuzz.rs
personal/projects/functions/src/: main.rs
personal/projects/guessing_game/: Cargo.toml
personal/projects/guessing_game/src/: main.rs
personal/projects/hello_cargo/: Cargo.toml
personal/projects/hello_cargo/src/: main.rs
personal/projects/iterators_closures/src/: main.rs
personal/projects/loops/src/: main.rs
personal/projects/multithreaded_web_server/src/: main.rs
personal/projects/oop/src/: main.rs
personal/projects/ownership/src/: main.rs  ownership_errors.rs  slice_type.rs
rust-book/src/: main.rs
(+7 files in other folders)
