[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
# Cargo understands Semantic Versioning (sometimes called SemVer), which is a standard for writing version numbers.
# When we include an external dependency, Cargo fetches the latest versions of everything that dependency needs from
# the registry, which is a copy of data from Crates.io. Crates.io is where people in the Rust ecosystem post their open source Rust projects for others to use.

# Another neat feature of Cargo is that running the cargo doc --open command will build documentation provided by 
# all of your dependencies locally and open it in your browser.